--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -13,6 +13,13 @@
   justify-content: center;
   align-items: center;
 }
+// 绝对水平垂直居中
+.absolute-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
 .flex-column-center {
   display: flex;
   flex-direction: column;
