--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -26,7 +26,9 @@
   justify-content: center;
   align-items: center;
 }
-
+.text-align-center {
+  text-align: center;
+}
 // 响应式断点
 @mixin respond-to($breakpoint) {
   @if $breakpoint == xs {
