--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
 $font-color: #000;
 // 颜色
-$primary-color: #42b983;
+$primary-color: #2c81fe;
 $secondary-color: #35495e;
 $error-color: #ff4d4f;
 $success-color: #52c41a;
