--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 @use './base.scss';
 @use './_mixins.scss';
 @use './_variables.scss';
+@use './element/index.scss';
 
 @media (hover: hover) {
   a:hover {
