--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @use './_mixins.scss';
 @use './_variables.scss';
 @use './element/index.scss';
+@use './element/el-dialog.scss';
 
 @media (hover: hover) {
   a:hover {
