--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -8,10 +8,7 @@
 
 // 完全居中
 .flex-center {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  @include flex(row, center, center);
 }
 // 绝对水平垂直居中
 .absolute-center {
@@ -20,11 +17,13 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
 .flex-column-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include flex(column, center, center);
+}
+
+.space-between {
+  @include flex(row, space-between, center);
 }
 .text-align-center {
   text-align: center;
